# Onlinestore

./: .gitignore.txt  dflsdlg
ERD Diagram/: ONLINE STORE REQUIREMENT SPECIFICATIONS.docx  ONLINE STORE REQUIREMENT SPECIFICATIONS.txt.docx
projonlinestore/onlinestore/: pyproject.toml
projonlinestore/onlinestore/services/: .env
projonlinestore/onlinestore/services/database/create_tables/: setting.py
projonlinestore/onlinestore/services/database/create_tables/user_db/: createTables.py
