[tool.poetry]
name = "onlinestore"
version = "0.1.0"
description = ""
authors = ["SufyanPak <Sufyan.Phy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.19"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
